2009-11-20  Michael Wiegand <michael.wiegand@intevation.de>

	* base/pidfile.c (pidfile_remove): Write a debug message to the log on
	pidfile deletion to help trace premature pidfile deletion.

2009-11-16  Matthew Mundell <matthew.mundell@intevation.de>

	* omp/omp.c (check_response): Make external.  Return 1 on OMP fail instead
	of -1.

	* omp/omp.h: Add new header.

2009-11-14  Srinivas NL <nl.srinivas@gmail.com>

	* misc/network.c : Added the following functions to handle
	ipv4 and ipv6 address lists parsed from -S option
		socket_get_next_source_v4_addr,
	  socket_get_next_source_v6_addr,
		_socket_get_next_source_v4_addr,
	  _socket_get_next_source_v6_addr

	* misc/network.c (socket_source_init): Calls
	_socket_get_next_source_v4_addr or _socket_get_next_source_v6_addr
	depending on address family.

	* misc/network.h : Added prototype declarations for new functions.

	* misc/pcap.c (v6_getsourceip): Gets either ipv4 or ipv6 source
	address depending on destination address type.

	* misc/pcap.c (v6_routethough): Gets either ipv4 or ipv6 source
	address depending on destination address type. Initialize source
	address to wild card address in the beginning of the function.

	* nasl/nasl_host.c (nasl_this_host): Gets either ipv4 or ipv6
	source address depending on target address type.

2009-11-10  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Fixed typos found by Ryan Schmidt. This change closes bug #1167.
	(bugs.openvas.org/1167)

	* configure.in, doc/README.BPF: Fixed typos.

	* configure: Regenerated

2009-11-10  Chandrashekhar B <bchandra@secpod.com>

	* misc/pcap.c: Migrating to ipv6, first phase.
	Implemented new functions, v6_getinterfaces,
	v6_is_local_ip, v6_get_mac_addr, v6_ipaddr2devname,
	v6_islocalhost, v6_getinterfaces, v6_getsourceip,
	getipv4routes, getipv6routes, v6_routethrough,
	ipv6addrmask.

	* misc/pcap.c (routethrough): Minor formatting.

	* misc/pcap_openvas.h: Prototypes declaration of new functions.
